# axum-jetpack

./: Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.github/workflows/: rust.yml
src/: lib.rs
src/example/: example.rs
src/size_limit/: config.rs  error.rs  layer.rs  middleware.rs  mod.rs  service.rs  size.rs
tests/: size_limit_tests.rs
