[package]
name = "axum-jetpack"
version = "0.8.1"
edition = "2024"
license = "MIT"
keywords = ["axum", "jetpack", "extra", "body", "limit"]
description = "Contains a collection of tools to improve the axum framework and security aspects"
readme = "README.md"
repository = "https://github.com/heart4it/axum-jetpack"

[[bin]]
name = "example"
path = "src/example/example.rs"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
http = "1.4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.5.2"
futures = "0.3.31"
tokio-stream = "0.1.18"

[dev-dependencies]
http-body-util = "0.1"
bytes = "1.0"
